update: main.ipynb

--- a/matrix_multiplication/main.ipynb
+++ b/matrix_multiplication/main.ipynb
@@ -6,13 +6,15 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-04-27T23:28:00.850274Z",
-     "start_time": "2025-04-27T23:28:00.798979Z"
+     "end_time": "2025-04-28T07:11:15.685613Z",
+     "start_time": "2025-04-28T07:11:15.630178Z"
     }
    },
    "source": [
     "import threading\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "from tree import TreeNode"
    ],
    "outputs": [],
    "execution_count": 1
@@ -20,44 +22,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-27T23:28:00.865880Z",
-     "start_time": "2025-04-27T23:28:00.853045Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "class TreeNode:\n",
-    "    def __init__(self, size, base_case=False, padded=False):\n",
-    "        self.size = size\n",
-    "        self.padded = padded\n",
-    "        self.base_case = base_case\n",
-    "        self.children = []\n",
-    "\n",
-    "    def add_child(self, child_node):\n",
-    "        self.children.append(child_node)\n",
-    "\n",
-    "    def display(self, prefix=\"\", is_last=True, is_root=True):\n",
-    "        connector = \"\"\n",
-    "        new_prefix = \"\"\n",
-    "        if not is_root:\n",
-    "            connector = \"└── \" if is_last else \"├── \"\n",
-    "            new_prefix = prefix + (\"    \" if is_last else \"│   \")\n",
-    "        size_str = f\"({str(self.size)}+1)\" if self.padded else str(self.size)\n",
-    "        print(prefix + connector + f\"{size_str}x{size_str}{' (base case)' if self.base_case else ''}\")\n",
-    "\n",
-    "        for i, child in enumerate(self.children):\n",
-    "            is_last_child = (i == len(self.children) - 1)\n",
-    "            child.display(prefix=new_prefix, is_last=is_last_child, is_root=False)"
-   ],
-   "id": "761a5caeab695f85",
-   "outputs": [],
-   "execution_count": 2
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-04-27T23:28:00.988481Z",
-     "start_time": "2025-04-27T23:28:00.974465Z"
+     "end_time": "2025-04-28T07:11:15.701442Z",
+     "start_time": "2025-04-28T07:11:15.689118Z"
     }
    },
    "cell_type": "code",
@@ -83,13 +49,13 @@
    ],
    "id": "d73a7b1cb34a99b4",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-27T23:28:01.020586Z",
-     "start_time": "2025-04-27T23:28:01.005487Z"
+     "end_time": "2025-04-28T07:11:15.824896Z",
+     "start_time": "2025-04-28T07:11:15.810370Z"
     }
    },
    "cell_type": "code",
@@ -100,8 +66,8 @@
     "\n",
     "    if n <= max_block_size:\n",
     "        current_node.base_case = True\n",
-    "        result = multiply_naive(A, B)\n",
-    "        return result, current_node\n",
+    "        C = multiply_naive(A, B)\n",
+    "        return C, current_node\n",
     "\n",
     "    if n % 2 != 0:\n",
     "        current_node.padded = True\n",
@@ -113,9 +79,9 @@
     "\n",
     "    results = {}\n",
     "\n",
-    "    def compute(block_name, blocks, node):\n",
-    "        C1, res_node = multiply_recursive(blocks[0][0], blocks[0][1], max_block_size)\n",
-    "        C2, _ = multiply_recursive(blocks[1][0], blocks[1][1], max_block_size)\n",
+    "    def compute(block_name, A_B_blocks, node):\n",
+    "        C1, res_node = multiply_recursive(A_B_blocks[0][0], A_B_blocks[0][1], max_block_size)\n",
+    "        C2, _ = multiply_recursive(A_B_blocks[1][0], A_B_blocks[1][1], max_block_size)\n",
     "        if block_name == 'C11':\n",
     "            node.add_child(res_node)\n",
     "        results[block_name] = C1 + C2\n",
@@ -128,8 +94,8 @@
     "    ]\n",
     "\n",
     "    threads = []\n",
-    "    for block_name, blocks in thread_args:\n",
-    "        t = threading.Thread(target=compute, args=(block_name, blocks, current_node), name=block_name)\n",
+    "    for block_name, A_B_blocks in thread_args:\n",
+    "        t = threading.Thread(target=compute, args=(block_name, A_B_blocks, current_node), name=block_name)\n",
     "        threads.append(t)\n",
     "        t.start()\n",
     "\n",
@@ -145,13 +111,13 @@
    ],
    "id": "13e138969e52aed1",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-27T23:28:01.050888Z",
-     "start_time": "2025-04-27T23:28:01.036647Z"
+     "end_time": "2025-04-28T07:11:15.854995Z",
+     "start_time": "2025-04-28T07:11:15.841083Z"
     }
    },
    "cell_type": "code",
@@ -161,13 +127,13 @@
    ],
    "id": "cb3992470a444ee0",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-27T23:28:01.082943Z",
-     "start_time": "2025-04-27T23:28:01.066975Z"
+     "end_time": "2025-04-28T07:11:15.885922Z",
+     "start_time": "2025-04-28T07:11:15.871617Z"
     }
    },
    "cell_type": "code",
@@ -177,13 +143,13 @@
    ],
    "id": "2926369bd6cd8e5",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-27T23:28:03.849827Z",
-     "start_time": "2025-04-27T23:28:01.098628Z"
+     "end_time": "2025-04-28T07:11:18.717276Z",
+     "start_time": "2025-04-28T07:11:15.902208Z"
     }
    },
    "cell_type": "code",
@@ -206,13 +172,13 @@
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-27T23:28:03.880099Z",
-     "start_time": "2025-04-27T23:28:03.866137Z"
+     "end_time": "2025-04-28T07:11:18.763995Z",
+     "start_time": "2025-04-28T07:11:18.749798Z"
     }
    },
    "cell_type": "code",
@@ -233,13 +199,13 @@
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-27T23:28:18.690542Z",
-     "start_time": "2025-04-27T23:28:03.896295Z"
+     "end_time": "2025-04-28T07:11:33.478666Z",
+     "start_time": "2025-04-28T07:11:18.768013Z"
     }
    },
    "cell_type": "code",
@@ -283,7 +249,7 @@
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 8
   }
  ],
  "metadata": {
