update: main.ipynb

--- a/matrix_multiplication/main.ipynb
+++ b/matrix_multiplication/main.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-04-28T07:11:15.685613Z",
-     "start_time": "2025-04-28T07:11:15.630178Z"
+     "end_time": "2025-04-28T18:14:52.977355Z",
+     "start_time": "2025-04-28T18:14:52.839479Z"
     }
    },
    "source": [
@@ -22,8 +22,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-28T07:11:15.701442Z",
-     "start_time": "2025-04-28T07:11:15.689118Z"
+     "end_time": "2025-04-28T18:14:53.008733Z",
+     "start_time": "2025-04-28T18:14:53.004413Z"
     }
    },
    "cell_type": "code",
@@ -54,13 +54,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-28T07:11:15.824896Z",
-     "start_time": "2025-04-28T07:11:15.810370Z"
+     "end_time": "2025-04-28T18:14:53.055011Z",
+     "start_time": "2025-04-28T18:14:53.042321Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "def multiply_recursive(A, B, max_block_size):\n",
+    "def distributed_multiplication(A, B, max_block_size):\n",
     "    n = A.shape[0]\n",
     "    current_node = TreeNode(size=n, base_case=False, padded=False)\n",
     "\n",
@@ -80,8 +80,8 @@
     "    results = {}\n",
     "\n",
     "    def compute(block_name, A_B_blocks, node):\n",
-    "        C1, res_node = multiply_recursive(A_B_blocks[0][0], A_B_blocks[0][1], max_block_size)\n",
-    "        C2, _ = multiply_recursive(A_B_blocks[1][0], A_B_blocks[1][1], max_block_size)\n",
+    "        C1, res_node = distributed_multiplication(A_B_blocks[0][0], A_B_blocks[0][1], max_block_size)\n",
+    "        C2, _ = distributed_multiplication(A_B_blocks[1][0], A_B_blocks[1][1], max_block_size)\n",
     "        if block_name == 'C11':\n",
     "            node.add_child(res_node)\n",
     "        results[block_name] = C1 + C2\n",
@@ -116,8 +116,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-28T07:11:15.854995Z",
-     "start_time": "2025-04-28T07:11:15.841083Z"
+     "end_time": "2025-04-28T18:14:53.429478Z",
+     "start_time": "2025-04-28T18:14:53.415590Z"
     }
    },
    "cell_type": "code",
@@ -132,8 +132,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-28T07:11:15.885922Z",
-     "start_time": "2025-04-28T07:11:15.871617Z"
+     "end_time": "2025-04-28T18:14:53.524207Z",
+     "start_time": "2025-04-28T18:14:53.493034Z"
     }
    },
    "cell_type": "code",
@@ -148,13 +148,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-28T07:11:18.717276Z",
-     "start_time": "2025-04-28T07:11:15.902208Z"
+     "end_time": "2025-04-28T18:14:56.519297Z",
+     "start_time": "2025-04-28T18:14:53.556273Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "C, root_node = multiply_recursive(A, B, MAX_BLOCK_SIZE)\n",
+    "C, root_node = distributed_multiplication(A, B, MAX_BLOCK_SIZE)\n",
     "root_node.display()"
    ],
    "id": "6ea6ac332f44fc34",
@@ -177,8 +177,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-28T07:11:18.763995Z",
-     "start_time": "2025-04-28T07:11:18.749798Z"
+     "end_time": "2025-04-28T18:14:56.611581Z",
+     "start_time": "2025-04-28T18:14:56.600546Z"
     }
    },
    "cell_type": "code",
@@ -204,8 +204,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-28T07:11:33.478666Z",
-     "start_time": "2025-04-28T07:11:18.768013Z"
+     "end_time": "2025-04-28T18:15:13.697964Z",
+     "start_time": "2025-04-28T18:14:56.629386Z"
     }
    },
    "cell_type": "code",
@@ -215,7 +215,7 @@
     "    B = np.random.randint(0, 10, size=(matrix_size, matrix_size))\n",
     "    max_block_sizes = range(1, 11)\n",
     "    for max_block_size in max_block_sizes:\n",
-    "        C, _ = multiply_recursive(A, B, max_block_size)\n",
+    "        C, _ = distributed_multiplication(A, B, max_block_size)\n",
     "        expected = A @ B\n",
     "        assert np.array_equal(C, expected)\n",
     "    print(f\"Test (ms={matrix_size}, mbs={max_block_sizes[0]}..{max_block_sizes[-1]}): PASSED.\")"
